--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <nav class="navbar">
     <ul>
         <li><a href="#home" class="active">home</a></li>
-        <li><a href="#feature">feature</a></li>
-        <li><a href="#about">about</a></li>
-        <li><a href="#gallery">gallery</a></li>
-        <li><a href="#review">review</a></li>
-        <li><a href="#contact">contact</a></li>
+        <li><a href="destinaton.html">Destination</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">review</a></li>
+        <li><a href="#">contact</a></li>
     </ul>
 </nav>
 
@@ -328,66 +328,6 @@
 </div>
 
 </section>
-
-<!-- review section ends -->
-
-<!-- contact section starts  -->
-
-<!--<section id="contact" class="contact">
-
-<h1 class="heading"><span>c</span>ontact <span>u</span>s</h1>
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.960043043403!2d72.85186461442511!3d19.109408755888396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c8348740e791%3A0xe302e2dd9ab8bae2!2sTravels%20Booking%20Office!5e0!3m2!1sen!2sin!4v1609421049401!5m2!1sen!2sin" width="100%" height="300" frameborder="0" style="border:0; outline:none;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
-<div class="row">
-
-<div class="contact-info">
-
-    <div class="box">
-        <h3> <i class="fas fa-home"></i> address </h3>
-        <p>Nepal, <br>
-        Kathmandu, <br>
-        400104.</p>
-    </div>
-
-    <div class="box">
-        <h3> <i class="fas fa-envelope"></i> e-mail </h3>
-        <p>xyz@gmail.com</p>
-    </div>
-
-    <div class="box">
-        <h3> <i class="fas fa-phone"></i> phone </h3>
-        <p>+123 4567 890</p>
-    </div>
-
-</div>
-
-<div class="contact-form-container">
-
-    <form action="">
-
-        <h3>get in touch</h3>
-
-        <div class="inputBox">
-            <input type="text" placeholder="full name">
-            <input type="email" placeholder="e-mail">
-        </div>
-
-        <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
-
-        <input type="submit" value="message">
-
-    </form>
-
-</div>
-
-</div>
-
-</section>
--->
-
-<!-- contact section ends -->
-
 <section class="newsletter">
 
 <h1>sign up 25% discount</h1>
