--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <img src="images/pic1.jpg" alt="">
         </div>
         <div class="content">
-            <h3>Sachin Shah</h3>
+            <h3>someone's name</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ex labore odio fuga doloremque sequi in asperiores ea, nisi ullam?</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -296,7 +296,7 @@
             <img src="images/pic2.jpg" alt="">
         </div>
         <div class="content">
-            <h3>Samrat Subedi</h3>
+            <h3>someone's name</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ex labore odio fuga doloremque sequi in asperiores ea, nisi ullam?</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
