--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     <!-- custom css file link  -->
     
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet"  href="css/style.css">
 
 
 </head>
