--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="#home" >home</a></li>
+        <li><a href="index.html" >home</a></li>
         <li><a href="destinaton.html">Destination</a></li>
-        <li><a href="#">about</a></li>
+        <li><a href="about.html">about</a></li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">review</a></li>
-        <li><a href="#" class="active">contact </a></li>
+        <li><a href="contact.html" class="active">contact</a></li>
     </ul>
 </nav>
 
@@ -147,5 +147,38 @@
 </div>
 
 </section>
+</section>
+<section class="newsletter">
+
+<h1>sign up 25% discount</h1>
+
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam provident saepe vel pariatur incidunt libero quo nisi ratione. Ea, corporis.</p>
+
+<form action="">
+    <input type="email" placeholder="enter your email">
+    <input type="submit" value="sign up">
+</form>
+
+</section>
+
+<section class="footer">
+
+<h1 class="credit">created by <span>Group-5</span> | all rights reserved.</h1>
+
+<div class="icons">
+    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="#" class="fab fa-twitter"></a>
+    <a href="#" class="fab fa-instagram"></a>
+    <a href="#" class="fab fa-github"></a>
+</div>
+
+</section>
+<!-- jquery cdn link  -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- custom js file link  -->
+<script src="js/main.js"></script>
+
 </body>
 </html>
