--- a/singlepage.html
+++ b/singlepage.html
@@ -23,12 +23,12 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="index.html" class="">home</a></li>
-        <li><a href="destinaton.html" class="">Destination</a></li>
-        <li><a href="#">about</a></li>
+        <li><a href="index.html" >home</a></li>
+        <li><a href="destinaton.html">Destination</a></li>
+        <li><a href="about.html">about</a></li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">review</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
 
@@ -48,22 +48,78 @@
     </section>
     <!-- Destinaton bedcrum section end  -->
 <!-- single Destinaton section starts  -->
-<section class="singlepage">
-    <div class="single">
-        <img src="images/pokhara1.jpg" alt="" width="500px">
-            <h1>Pokhara</h1>
-            <p>Nepal is one of the most astounding countries to travel to in the world.<br> 
-                A landlocked country located between two big countries China and India might be smaller 
-                in terms of area but the natural beauty embracing  <br> the heart of Nepal is something truly special. 
-                Nepal is the country having 8 of the 14 mountains over 8,000 meters. <br>
-                A country full of ancient culture, a variety of flora and fauna, awesome trekking trails is <br>a heaven for all the adventurous travelers. 
-                Nepal is a country perfect for people who love adventure where you can try rafting, kayaking,<br> bungee jumping, and whatnot. 
-                Kathmandu Pokhara Tour is one of the most popular city tours in <br>Nepal that allows you to enjoy natural beauty 
-                along with ancient cultural miracles.</p>
+<div class="small-container single-product">
+	<div class="row">
+		<div class="col-2">
+			<img src="images/pokhara1.jpg" id="ProductImg">     
 
-    </div>
+		</div>
+		<div class="col-2">
+			<p>Nepal</p>
+			<h1>Pokhara</h1>
+			<br>
+			<h3>Tour Details</h3>
+			<br>
+			<p>Nepal Is One Of The Most Astounding Countries To Travel To In The World.
+                A Landlocked Country Located Between Two Big Countries China And India Might Be Smaller In Terms Of Area But The Natural Beauty Embracing
+                The Heart Of Nepal Is Something Truly Special. Nepal Is The Country Having 8 Of The 14 Mountains Over 8,000 Meters.
+                A Country Full Of Ancient Culture, A Variety Of Flora And Fauna, Awesome Trekking Trails Is
+                A Heaven For All The Adventurous Travelers. Nepal Is A Country Perfect For People Who Love Adventure Where You Can Try Rafting, Kayaking,
+                Bungee Jumping, And Whatnot. Kathmandu Pokhara Tour Is One Of The Most Popular City Tours In
+                Nepal That Allows You To Enjoy Natural Beauty Along With Ancient Cultural Miracles.
+                
+                </p>
+                <br>
+                <h3>Tour Itinerary</h3>
+                <br>
+                <h4>Day 1: Davi’s Falls and Caves</h4>
+                <br>
+                <p>Davis Falls, located 2km southwest of the airport, is a thundering waterfall named after a Swiss 
+                    couple who fell in during the early 1960’s.  Today there is much less chance of falling into 
+                    the fast flowing stream as it is all safely railed off.  Nearby the falls are a series of caves 
+                    including Mahendra Cave with its stalagmites and stalactites and statue of Lord Shiva; 
+                    the Bat Cave, a smaller cave, providing home for a colony of bats, and Gupteswor Mahadeva 
+                    Cave which, after a low long tunnel, opens out into a huge open cavern and deep gorge from 
+                    where, with a bit of scrambling, visitors can view Davi’s Falls.</p>
+                    <br>
+                    <h4>Day 2: Sunrise trip to Sarangkot 4:30 AM</h4>
+                    <br>
+                    <p>Sarangkot is located at 1,600m and about 45 minutes from Pokhara.  Famous for its sunrise view it is a 
+                        stunning place to view the Annapurna Range, Pokhara and Fewa Lake. Trips up Sarangkot begins in the 
+                        dark, to reach the top in time to watch the sun come up over the Himalayas, lighting the snow-capped 
+                        mountains in a warm orange glow.</p>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
 
-</section>
+    <h2>You can Contact Us Using this Form.</h2>
+
+ <form class="form1">
+     
+   <label>First Name:</label>
+   <input type="text" name="lname" class="in" placeholder="Enter Your First Name..">
+
+   <label>Last Name:</label>
+   <input type="text" name="lname" class="in" placeholder="Enter Your Last Name..">
+
+   <label>Email:</label>
+   <input type="text" name="lname" class="in" placeholder="Enter Your Email Address..">
+   <label>Contact No:</label>
+   <input type="number" name="lname" class="in" placeholder="Enter Your Contact Nos..">
+
+  <label>Your Messages:</label>
+    <textarea class="in" id="t" placeholder="Write..."></textarea>
+
+
+  <input type="submit" name="" value="Submit" class="sb">
+
+
+ </form>
+
+		</div>
+	</div>
+</div>
  <!-- newsletter section starts  -->
  <section class="newsletter">
 
