--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="#home" class="active">home</a></li>
+        <li><a href="index.html" class="active">home</a></li>
         <li><a href="destinaton.html">Destination</a></li>
-        <li><a href="#">about</a></li>
+        <li><a href="about.html">about</a></li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">review</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
 
@@ -353,24 +353,6 @@
 </div>
 
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- jquery cdn link  -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
