--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="index.html" class="active">home</a></li>
+        <li><a href="#home" class="active">home</a></li>
         <li><a href="destinaton.html">Destination</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="#">Profile</a></li>
+        <li><a href="profile.html">Profile</a></li>
         <li><a href="#">review</a></li>
         <li><a href="contact.html">contact</a></li>
     </ul>
