--- a/singlepage.html
+++ b/singlepage.html
@@ -26,7 +26,7 @@
         <li><a href="index.html" >home</a></li>
         <li><a href="destinaton.html">Destination</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="#">Profile</a></li>
+        <li><a href="profile.html">Profile</a></li>
         <li><a href="#">review</a></li>
         <li><a href="contact.html">contact</a></li>
     </ul>
