--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <li><a href="destinaton.html">Destination</a></li>
         <li><a href="about.html">about</a></li>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="#">review</a></li>
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
@@ -89,7 +88,7 @@
         <span class="discount">-35%</span>
         <img src="images/card1.jpg" alt="">
         <div class="content">
-            <h3 class="title">hawaii</h3>
+            <h3 class="title">pokhara</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi consequuntur ea molestias illo. Porro error facilis obcaecati. Quisquam, placeat.</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -98,14 +97,14 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <a href="#"><button class="btn">check out!</button></a>
+            <a href="singlepage.html"><button class="btn">check out!</button></a>
         </div>
     </div>
 
     <div class="card">
         <img src="images/card2.jpg" alt="">
         <div class="content">
-            <h3 class="title">egypt</h3>
+            <h3 class="title">lumbini</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi consequuntur ea molestias illo. Porro error facilis obcaecati. Quisquam, placeat.</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -114,7 +113,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <a href="#"><button class="btn">check out!</button></a>
+            <a href="singlepage.html"><button class="btn">check out!</button></a>
         </div>
     </div>
 
@@ -122,7 +121,7 @@
         <span class="discount">-45%</span>
         <img src="images/card3.jpg" alt="">
         <div class="content">
-            <h3 class="title">india</h3>
+            <h3 class="title">chitwan</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi consequuntur ea molestias illo. Porro error facilis obcaecati. Quisquam, placeat.</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -131,7 +130,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <a href="#"><button class="btn">check out!</button></a>
+            <a href="singlepage.html"><button class="btn">check out!</button></a>
         </div>
     </div>
 
@@ -140,9 +139,9 @@
 
     <div class="card">
         <span class="discount">-35%</span>
-        <img src="images/card1.jpg" alt="">
+        <img src="images/card4.jpg" alt="">
         <div class="content">
-            <h3 class="title">hawaii</h3>
+            <h3 class="title">mustang</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi consequuntur ea molestias illo. Porro error facilis obcaecati. Quisquam, placeat.</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -151,14 +150,14 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <a href="#"><button class="btn">check out!</button></a>
+            <a href="singlepage.html"><button class="btn">check out!</button></a>
         </div>
     </div>
 
     <div class="card">
-        <img src="images/card2.jpg" alt="">
+        <img src="images/card5.jpg" alt="">
         <div class="content">
-            <h3 class="title">egypt</h3>
+            <h3 class="title">illam</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi consequuntur ea molestias illo. Porro error facilis obcaecati. Quisquam, placeat.</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -167,15 +166,15 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <a href="#"><button class="btn">check out!</button></a>
+            <a href="singlepage.html"><button class="btn">check out!</button></a>
         </div>
     </div>
 
     <div class="card">
         <span class="discount">-45%</span>
-        <img src="images/card3.jpg" alt="">
+        <img src="images/card6.jpg" alt="">
         <div class="content">
-            <h3 class="title">india</h3>
+            <h3 class="title">rara</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi consequuntur ea molestias illo. Porro error facilis obcaecati. Quisquam, placeat.</p>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -184,7 +183,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <a href="#"><button class="btn">check out!</button></a>
+            <a href="singlepage.html"><button class="btn">check out!</button></a>
         </div>
     </div>
 
