--- a/singlepage.html
+++ b/singlepage.html
@@ -92,7 +92,7 @@
                         <br>
                         <br>
 
-    <h2>You can Contact Us Using this Form.</h2>
+    <h2>You can send your inquiry via the form below.</h2>
 
  <form class="form1">
      
