--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
 <header>
 
-<a href="#" class="logo">Tour Management <span>.</span></a>
+<a href="index.html" class="logo">Tour Management <span>.</span></a>
 
 <nav class="navbar">
     <ul>
