--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 <header>
 
-<a href="#" class="logo">Tour Management <span>.</span></a>
+<a href="index.html" class="logo">Tour Management <span>.</span></a>
 
 <nav class="navbar">
     <ul>
-        <li><a href="#home" class="active">home</a></li>
+        <li><a href="index.html" class="active">home</a></li>
         <li><a href="destinaton.html">Destination</a></li>
         <li><a href="about.html">about</a></li>
         <li><a href="profile.html">Profile</a></li>
